--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,51 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgb(205, 50, 50);
+}
+
+h2 {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 2rem;
+}
+
+.slider-frame {
+    width: 1280px;
+    height: auto;
+    margin: 50px auto 0;
+    overflow: hidden;
+}
+
+.slider-frame ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 16s infinite alternate ease-in-out;
+}
+
+.slider-frame li {
+    list-style: none;
+    width: 100%;
+    position: relative;
+}
+
+.slider-frame img {
+    width: 100%;
+}
+
+@keyframes slide {
+    0% {margin-left: 0%;}
+    20% {margin-left: 0%;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
 }
 
 .container {
@@ -30,6 +75,15 @@
 }
 
 @media(max-width:991px){
+
+    body{
+        padding: 30px;
+    }
+
+    .slider-frame {
+        width: 100%;
+    }
+
     .container{
         padding: 30px;
         grid-template-columns: repeat(1, 1fr);
