--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,3 +96,10 @@ h2 {
         grid-column-start: span 2;
     }
 }
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
