--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,26 @@ body{
     font-family: sans-serif;
 }
 
+.redes{
+    position:fixed;
+    z-index: 999;
+    border-radius: 50%;
+    bottom: 20px;
+    right: 25px;
+    padding: 25px;
+    transition: ease 0.3s;
+  }
 
+.redes:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
+}
 
+.boton {
+    width: 80px;
+    transition: ease 1s;
+}
+  
 a {
     text-decoration: none;
     color: black;
@@ -136,3 +154,4 @@ header {
     padding: 10px;
     background-color: brown;
 }
+
