--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(205, 50, 50);
+    background-color: rgb(243, 66, 66);
     font-family: sans-serif;
 }
 
@@ -148,10 +148,28 @@ h2 {
 
 header {
     display: flex;
-    min-height: 70px;
+    min-height: 7px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    background-color: brown;
+    background-color: rgb(196, 45, 45);
+}
+
+.text-slider {
+    text-align: center;
+}
+
+.video-yt {
+    margin-left: 300px;
+    border: 3px solid black;
+}
+
+.text-yt {
+    float: right;
+    flex: 1;
+}
+
+.container-yt {
+    margin: 100px auto;
+    display: flex;
 }
 
