--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,6 +46,10 @@ h2 {
     font-size: 2rem;
 }
 
+.tittle-gallery {
+    text-align: center;
+}
+
 .slider-frame {
     width: 1280px;
     height: auto;
@@ -148,28 +152,38 @@ h2 {
 
 header {
     display: flex;
+    font-size: 25px;
     min-height: 7px;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
     background-color: rgb(196, 45, 45);
+}
+
+.name {
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .text-slider {
     text-align: center;
-}
+    font-size:30px;
 
-.video-yt {
-    margin-left: 300px;
-    border: 3px solid black;
 }
 
 .text-yt {
     float: right;
-    flex: 1;
 }
+
+.text-box-yt {
+    float: right;
+    font-size: 20px;
+}
+
 
 .container-yt {
-    margin: 100px auto;
-    display: flex;
+    width:1000px;
+    height:500px;
+    margin:0 auto;
+    display:flex;
+    border:3px solid rgb(0, 0, 0);
 }
-
