--- a/CSS/style.css
+++ b/CSS/style.css
@@ -170,20 +170,20 @@ header {
 
 }
 
-.text-yt {
-    float: right;
-}
-
 .text-box-yt {
-    float: right;
     font-size: 20px;
+    margin-right: 30px;
 }
 
 
 .container-yt {
-    width:1000px;
-    height:500px;
+    width:1200px;
+    height:400px;
     margin:0 auto;
     display:flex;
-    border:3px solid rgb(0, 0, 0);
+    justify-content: center;
+}
+
+iframe {
+    margin-right: 40px;
 }
