--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,41 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(243, 66, 66);
+    background-color: rgb(255, 55, 55);
     font-family: sans-serif;
+}
+
+header {
+    display: flex;
+    font-size: 25px;
+    min-height: 7px;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background-color: rgb(56, 0, 0);
+}
+
+.name {
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    transition: all .3 ease;
+}
+
+nav a {
+    font-weight: 100;
+    font-size: 20px;
+    padding-right: 30px;
+}
+
+nav a:hover {
+    color: rgb(245, 65, 0);
 }
 
 .redes{
@@ -24,20 +57,6 @@ body{
 .boton {
     width: 80px;
     transition: ease 1s;
-}
-  
-a {
-    text-decoration: none;
-    color: black;
-}
-
-nav a {
-    font-weight: 600;
-    padding-right: 10px;
-}
-
-nav a:hover {
-    color: rgb(193, 220, 20);
 }
 
 h2 {
@@ -142,26 +161,21 @@ h2 {
     .box:nth-child(1){
         grid-column-start: span 2;
     }
+
+    .footer-row {
+        text-align: center;
+    }
+
+    .footer-links {
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
 
 .form {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-header {
-    display: flex;
-    font-size: 25px;
-    min-height: 7px;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    background-color: rgb(196, 45, 45);
-}
-
-.name {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .text-slider {
@@ -185,4 +199,70 @@ header {
 
 iframe {
     margin-right: 40px;
+}
+
+.container-footer {
+    padding-right: 100px;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    list-style: none;
+    padding: 0;
+}
+
+.footer {
+    background-color: rgb(56, 0, 0);
+    padding: 120px 0;
+    height: 95px;
+}
+
+.footer-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer-links {
+    width: 45%;
+    padding: 0 15px;
+}
+
+.footer-links h4 {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 25px;
+    font-weight: 500;
+    border-bottom: 2px solid rgb(255, 30, 30);
+    padding-bottom: 10px;
+    display: inline-block;
+}
+
+.footer-links ul li a {
+    font-size: 18px;
+    text-decoration: none;
+    display: block;
+    color: white;
+    margin-bottom: 15px;
+    transition: all .3 ease;
+}
+
+.footer-links ul li a:hover {
+    color: rgb(245, 65, 0);
+    padding-left: 6px;
+}
+
+.social-link a {
+    display: inline-block;
+    min-height: 40px;
+    width: 40px;
+    background-color: rgb(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: white;
+    transition: all .5 ease;
+}
+
+.social-link a:hover {
+    background-color: rgb(245, 65, 0);
 }
