--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,11 +2,12 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(255, 55, 55);
     font-family: sans-serif;
 }
 
 header {
+    position: sticky;
+    top: 0;
     display: flex;
     font-size: 25px;
     min-height: 7px;
@@ -14,6 +15,7 @@ header {
     align-items: center;
     height: 60px;
     background-color: rgb(56, 0, 0);
+    z-index: 9;
 }
 
 .name {
@@ -170,6 +172,7 @@ h2 {
         width: 100%;
         margin-bottom: 30px;
     }
+
 }
 
 .form {
