--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    background: linear-gradient(to right, #111111, #ffffff);
 }
 
 header {
@@ -119,6 +120,13 @@ h2 {
     padding: 100px 0;
 }
 
+.gradient1 {
+    background: linear-gradient(to right, #5fcfff, #773ad8); /* Degradado de dos colores */
+}
+
+.gradient2 {
+    background: linear-gradient(to right, #6a11cb, #257ffc); /* Otro degradado de dos colores */
+}
 .box img {
     width: 100%;
     height: 100%;
@@ -193,6 +201,8 @@ h2 {
 }
 
 .container-yt {
+    position: relative;
+    overflow: hidden;
     width:1270px;
     height:400px;
     margin:0 auto;
