--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ header{
     justify-content: space-between;
     padding: 0 0px;
     z-index: 2;
+    border-radius: 8px;
 }
 
 .logo {
@@ -250,7 +251,7 @@ h2 {
     }
 
     header {
-        padding: 0px 30px;
+        padding: 0px 10px;
     }
 
     .bars {
@@ -307,6 +308,9 @@ h2 {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .container-yt{
+        padding: 30px;
+    }
     
     .container-open .popup-image img{
         width: 95%;
