--- a/CSS/style.css
+++ b/CSS/style.css
@@ -285,7 +285,8 @@ h2 {
     }
 
     header {
-        padding: 0px 10px;
+        position: sticky;
+        padding: 0px 5px;
     }
 
     .bars {
