--- a/CSS/style.css
+++ b/CSS/style.css
@@ -307,7 +307,7 @@ h2 {
         top: 80px;
         left: 0;
         right: 0;
-        width: 94vw;
+        width: 100%;
         background-color: #620000;
         transition: 0.5s;
         overflow: hidden;
